# img-transformer

./: .dockerignore  .gitignore  Dockerfile  README.md  img_to_webp.ipynb  pyproject.toml
app/: main.py  schemas.py
app/static/: index.html
tests/: _helpers.py  test_api.py  test_archive.py  test_image.py  test_pdf_optimizer.py
transform/: __init__.py  archive.py  background.py  image.py  pdf_optimizer.py
