[project] 
name = "img-transformer"
version = "0.1.0"
description = "Convert and resize images via a small FastAPI web app."
authors = [{ name = "Martin Salinas" }]

requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "pillow~=11.2",
    "python-multipart~=0.0",
    "pydantic~=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "httpx~=0.28",
    "ruff~=0.11",
]

bgremove = [
    "rembg[cpu]==2.0.67",
    "onnxruntime==1.22.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "transform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]